Add rspec testing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+    <button class="btn btn success">Hello</button>
+      <%= yield %>
+    </div>
   </body>
 </html>
