--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,20 @@
-<div>
-<p>The list of users</p>
+<div class="container">
+  <div class="card" style="width: 100%">
+    <ul class="list-group list-group-flush">
+      <% @users.each do |user|%>
+      <li class="list-group-item ">
+        <div class="d-flex justify-content-between">
+          <div class="h5"><b>Name: </b><%=user.name%></div>
+        <small>Posts: </b><%=user.posts_counter%></b> </small>
+        </div>
+        <div class="">
+          <%= link_to 'show user', user_path(user), class: 'btn-sm btn btn-primary' %>
+         </div>
+      </li>
+      <%end%>
+    </ul>
+    <div class="card-footer">
+      <small class="text-muted">Developed by M-loman</small>
+    </div>
+  </div>
 </div>
