--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
+
+
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsBlog</title>
+    <title>Blog</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,8 +14,7 @@
   </head>
 
   <body>
-    <div class="container">
-      <%= yield %>
-    </div>
+    <%= render partial: 'shared/navbar'%>
+    <%= yield %>
   </body>
 </html>
