fetched recent post

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
       <%end%>
     </ul>
     <div class="card-footer">
-      <small class="text-muted">Developed by M-loman</small>
+      <small class="text-muted">Developed by M-Loman</small>
     </div>
   </div>
 </div>
