Add create post button

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,9 @@
 
-
   <div class="container">
     <div class="card" style="width: 100%">
+      <button class="btn btn-success">
+        <%= link_to 'create post', new_user_post_path, class: 'nav-link active' %>
+      </button>
       <ul class="list-group list-group-flush">
         <li class="list-group-item ">
             <div class="d-flex justify-content-between">
