--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,11 @@
 <div class="container">
-    <div class="card mb-3">
-      <div class="card-title d-flex justify-content-between p-2">
-        <h6 class="">Post:<%= @post.id %></h6>
+  <% if flash[:success] %>
+  <div class="alert alert-success"><%= flash[:success] %></div>
+  <% end %>
+  <div class="card mb-3">
+    <div class="card-title d-flex justify-content-between p-2">
+      <h6 class="">Post:<%= @post.id %></h6>
+      <div class="d-flex justify-content-between p-2">
         <p class="mx-4" style="position: relative">
           Comments:
           <span
@@ -19,25 +23,46 @@
             ><%= @post.comments_counter %></span
           >
         </p>
+        <p class="mx-4" style="position: relative">
+          Likes:
+          <span
+            style="
+              position: absolute;
+              width: 20px;
+              height: 20px;
+              border-radius: 50%;
+              background: green;
+              color: white;
+              font-size: 12px;
+              text-align: center;
+            "
+            class=""
+            ><%= @post.likes_counter %></span
+          >
+        </p>
       </div>
-      <div class="card-body">
-        <p class="card-text">post: <%= @post.text %></p>
-        <%= link_to 'Delete', user_post_path(@post.id), method: :delete, class: 'btn-sm btn btn-danger' %>
-        <%= link_to 'Back', user_posts_path, class: 'btn-sm btn btn-default' %>
-      </div>
-      <section class="py-1 container">
-        <h6>Comments:</h6>
-        <div class="post">
-          <% @post.comments.each do |comment| %>
-          <div class="d-flex justify-content-between bg-light p-1 rounded mb-1">
-            <div class="post-body">
-              <h6><b><%= comment.id%>.</b> <%= comment.text%></h6>
-            </div>
-          </div>
-          <% end %>
-        </div>
-      </section>
     </div>
+    <div class="card-body">
+      <p class="card-text">post: <%= @post.text %></p>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="link">
+          <%= link_to 'Delete', user_post_path(@post.id), method: :delete,
+          class: 'btn-sm btn btn-danger' %> <%= link_to 'Back', user_posts_path,
+          class: 'btn-sm btn btn-default' %>
+        </div>
+        <div class="like"><%= render 'posts/like_form' %></div>
+      </div>
+      <%= link_to 'Add Comment', new_user_post_comment_url(@post.author, @post),class: 'btn-sm btn btn-outline-success mt-3 text-primary' %>
+    </div>
+    <section class="py-1 container">
+      <h6>Comments:</h6>
+      <div class="post">
+        <% if @post.comments.length == 0 %>
+        <p class="mt-3">No comments Available!</p>
+        <% else %> <% @post.comments.each do |comment| %>
+        <p class="mt-3"><%= comment.author.name %>: <%= comment.text %></p>
+        <% end %> <% end %>
+      </div>
+    </section>
   </div>
-  
-
+</div>
