--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,10 @@
   <% end %>
   <div class="card mb-3">
     <div class="card-title d-flex justify-content-between p-2">
-      <h6 class="">Post:<%= @post.id %></h6>
+      <h6 class="">
+        Post:<%= @post.id %>
+        <b>Title</b><%= @post.title %>
+      </h6>
       <div class="d-flex justify-content-between p-2">
         <p class="mx-4" style="position: relative">
           Comments:
@@ -43,7 +46,7 @@
       </div>
     </div>
     <div class="card-body">
-      <p class="card-text">post: <%= @post.text %></p>
+      <p class="card-text">the post: <%= @post.text %></p>
       <div class="d-flex justify-content-between align-items-center">
         <div class="link">
           <%= link_to 'Delete', user_post_path(@post.id), method: :delete,
@@ -59,7 +62,7 @@
       <div class="post">
         <% if @post.comments.length == 0 %>
         <p class="mt-3">No comments Available!</p>
-        <% else %> <% @post.comments.each do |comment| %>
+        <% else %> <% @post.comments.includes([:author]).each do |comment| %>
         <p class="mt-3"><%= comment.author.name %>: <%= comment.text %></p>
         <% end %> <% end %>
       </div>
