Install devise and configured the codes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,4 @@
 
-
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,17 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%
-=begin%>
- <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %> 
-<%
-=end%>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
     <%= render partial: 'shared/navbar'%>
+    <div class="container">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    </div>
     <%= yield %>
   </body>
 </html>
