--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -47,14 +47,17 @@
             <%end%>
           </div>
           </div>
-          <div class="">
+          <div class=" d-flex justify-content-between">
+           <div class="links">
             <% if can? :read, post %>
             <%= link_to 'Read more', user_post_path(@user, post.id), class: 'btn-sm btn btn-primary' %>
             <%end%>
             <% if can? :destroy, post %>
             <%= link_to 'Delete', user_post_path(@user, post.id),data: {turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete post?'}, class: 'btn-sm btn btn-danger' %>
             <%end%>
-          <%= link_to 'Back', user_path(@user), class: 'btn-sm btn btn-default' %>
+           <%= link_to 'Back', user_path(@user), class: 'btn-sm btn btn-default' %>
+           </div>
+           <span></span>
            </div>
         </li>
         <%end%>
