Update comment button

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -6,7 +6,7 @@
   method: :post, local: true, scope: :comment do |f| %>
   <div class="f-flex justify-content-between align-content-center">
     <div><%= f.text_area :text, class: 'form-control mb-2' %></div>
-    <div><%= f.submit "Add Post", class: 'btn btn-primary' %></div>
+    <div><%= f.submit "Create Post", class: 'btn btn-primary' %></div>
   </div>
   <% end %>
 </div>
